shady-KISS-skin History
-------------------------------------------
2016-02-03:
- Added wide currentelement in channelsmenu
- Fixed presenteventduration in channelsmenu

2016-02-02:
- Fixed width of markers
- Fixed columns in displaymenurecordings
- Added setup to show only timers and infos in mainmenu
- Reduced height of textboxes in all currentelements

2016-02-01
- Added {date} for WHATSONFAVORITES
- Added wide currentelement in schedules, timers and recordings

2016-01-31:
- Fixed area of {timerstart} - {timerstop} in displaymenutimers
- Fixed needless display of posterbackgrounds in currentelements

2016-01-21:
- Fixed conditions for neutrinoepg
- Added starttimes for neutrinoepg

2016-01-13:
- Added EPG-images in displaymenudetailrecording

2016-01-12:
- Added EPG-images in displaymenudetailepg and plug-tvguideng-detail

2016-01-08:
- Added setup for numbering in main- and setupmenu

2015-09-10:
- Removed some useless code

2015-09-03:
- Changed format of datetime

2015-08-31:
- Fixed scrollheight of actor-thumbs, fixed areawidht of datetime in menus

2015-08-11:
- Changed setup of menubars

2015-08-09:
- Added horizontal menu in displaymenurecordings

2015-08-01:
- Added discusage in menutimers, made ist optional

2015-07-31:
- Switched vdrusagestring to graphical usedpercent

2015-07-30:
- Added percentseenbar in currentelement of recordings
- Added progressmodeonly in displayreplay
- Added vdrusagestring in menurecordings

2015-07-29:
- Fixed layer for timeshifttotal

2015-07-27:
- Improved visibility of timeshift-progressbar

2015-07-27:
- Fixed area of currenttime in displayreplay
- Switched font to Open Sans

2015-07-17:
- Commented colors in theme.xml
- Small fixes

2015-07-15:
- Added svg-templates
- Added condition for recdate in displayreplay
- Removed obsolte colours
- Fixed scrollbars in main- and setup-menu

2015-07-11:
- Some small fixes
- Added scrollbars for plex-plugin
- Fixed time-format 
- Test areacontainer in displaymenurecordings